[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/keh_gddb/editor/btplay_16x16.png" type="Texture" id=1]
[ext_resource path="res://shared/fonts/Aileron-Bold.otf" type="DynamicFontData" id=2]
[ext_resource path="res://shared/fonts/aileron-bold.tres" type="DynamicFont" id=3]
[ext_resource path="res://demos/replays/replayviewer.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 14
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 2 )

[node name="Replay Viewer" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 512.0

[node name="ViewportContainer" type="ViewportContainer" parent="CenterContainer"]
margin_left = 149.0
margin_top = 20.0
margin_right = 875.0
margin_bottom = 428.0

[node name="Viewport" type="Viewport" parent="CenterContainer/ViewportContainer"]
size = Vector2( 726, 408 )
handle_input_locally = false
render_target_update_mode = 3

[node name="FPS" type="HBoxContainer" parent="."]
margin_left = 904.0
margin_top = 48.0
margin_right = 968.0
margin_bottom = 68.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="FPS"]
margin_right = 36.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )
text = "FPS: "

[node name="Readout" type="Label" parent="FPS"]
margin_left = 36.0
margin_right = 36.0
margin_bottom = 20.0
custom_fonts/font = ExtResource( 3 )

[node name="TimeScaleLabel" type="Label" parent="."]
margin_left = 904.0
margin_top = 520.0
margin_right = 1028.0
margin_bottom = 538.0
custom_fonts/font = SubResource( 1 )
text = "Playback Speed:"

[node name="TimeScale" type="SpinBox" parent="."]
margin_left = 904.0
margin_top = 538.0
margin_right = 1024.0
margin_bottom = 562.0
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 128.0
margin_top = 498.0
margin_right = 896.0
margin_bottom = 560.0
custom_constants/separation = 0
alignment = 2
__meta__ = {
"_editor_description_": ""
}

[node name="Timeline" type="HSlider" parent="VBoxContainer"]
margin_top = 6.0
margin_right = 768.0
margin_bottom = 22.0
rounded = true

[node name="MediaControls" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 768.0
margin_bottom = 62.0
rect_min_size = Vector2( 0, 40 )
custom_constants/separation = 0
alignment = 1

[node name="Restart" type="Button" parent="VBoxContainer/MediaControls"]
margin_left = 48.0
margin_right = 144.0
margin_bottom = 40.0
rect_min_size = Vector2( 96, 0 )
custom_fonts/font = ExtResource( 3 )
text = "[<-"
icon_align = 1

[node name="10SecondsBack" type="Button" parent="VBoxContainer/MediaControls"]
margin_left = 144.0
margin_right = 240.0
margin_bottom = 40.0
rect_min_size = Vector2( 96, 0 )
custom_fonts/font = ExtResource( 3 )
text = "<<"
icon_align = 1

[node name="1FrameBack" type="Button" parent="VBoxContainer/MediaControls"]
margin_left = 240.0
margin_right = 336.0
margin_bottom = 40.0
rect_min_size = Vector2( 96, 0 )
custom_fonts/font = ExtResource( 3 )
text = "<"
icon_align = 1

[node name="PauseAndPlay" type="Button" parent="VBoxContainer/MediaControls"]
margin_left = 336.0
margin_right = 432.0
margin_bottom = 40.0
rect_min_size = Vector2( 96, 0 )
custom_fonts/font = ExtResource( 3 )
icon = ExtResource( 1 )
icon_align = 1

[node name="1FrameForward" type="Button" parent="VBoxContainer/MediaControls"]
margin_left = 432.0
margin_right = 528.0
margin_bottom = 40.0
rect_min_size = Vector2( 96, 0 )
custom_fonts/font = ExtResource( 3 )
text = ">"
icon_align = 1

[node name="10SecondsForward" type="Button" parent="VBoxContainer/MediaControls"]
margin_left = 528.0
margin_right = 624.0
margin_bottom = 40.0
rect_min_size = Vector2( 96, 0 )
custom_fonts/font = ExtResource( 3 )
text = ">>"
icon_align = 1

[node name="ToEnd" type="Button" parent="VBoxContainer/MediaControls"]
margin_left = 624.0
margin_right = 720.0
margin_bottom = 40.0
rect_min_size = Vector2( 96, 0 )
custom_fonts/font = ExtResource( 3 )
text = "->]"
icon_align = 1

[node name="TimecodeInfo" type="VBoxContainer" parent="."]
margin_top = 320.0
margin_right = 146.0
margin_bottom = 350.0

[node name="TimeReadout" type="HBoxContainer" parent="TimecodeInfo"]
margin_right = 146.0
margin_bottom = 13.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="TimecodeInfo/TimeReadout"]
margin_right = 72.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 2 )
text = "Timecode:           "

[node name="Readout" type="Label" parent="TimecodeInfo/TimeReadout"]
margin_left = 72.0
margin_right = 98.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 2 )
text = "00:00"

[node name="Max" type="Label" parent="TimecodeInfo/TimeReadout"]
margin_left = 98.0
margin_right = 127.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 2 )
text = "/00:00"

[node name="FrameReadout" type="HBoxContainer" parent="TimecodeInfo"]
margin_top = 17.0
margin_right = 146.0
margin_bottom = 30.0
custom_constants/separation = 0

[node name="Label" type="Label" parent="TimecodeInfo/FrameReadout"]
margin_right = 71.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 2 )
text = "Current frame: "

[node name="Readout" type="Label" parent="TimecodeInfo/FrameReadout"]
margin_left = 71.0
margin_right = 107.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 2 )
text = "000000"

[node name="Max" type="Label" parent="TimecodeInfo/FrameReadout"]
margin_left = 107.0
margin_right = 146.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 2 )
text = "/000000"

[connection signal="pressed" from="VBoxContainer/MediaControls/Restart" to="." method="restart"]
[connection signal="pressed" from="VBoxContainer/MediaControls/10SecondsBack" to="." method="go_back"]
[connection signal="pressed" from="VBoxContainer/MediaControls/1FrameBack" to="." method="go_back_1"]
[connection signal="pressed" from="VBoxContainer/MediaControls/PauseAndPlay" to="." method="pause_unpause"]
[connection signal="pressed" from="VBoxContainer/MediaControls/1FrameForward" to="." method="go_forward_1"]
[connection signal="pressed" from="VBoxContainer/MediaControls/10SecondsForward" to="." method="go_forward"]
[connection signal="pressed" from="VBoxContainer/MediaControls/ToEnd" to="." method="go_to_end"]
